--- a/src/_tile.scss
+++ b/src/_tile.scss
@@ -75,3 +75,11 @@
 .cb .tile.tile5 {
     background: url('img/red-cb.svg');
 }
+
+.scoring-tile {
+    width: 60px;
+    height: 60px;
+    display: inline-block;
+    position: absolute;
+    pointer-events: none;
+}
